# claude-usage-bar

./: .gitignore  ACKNOWLEDGEMENTS.md  Makefile  README.md  appcast.xml  claude_usage_bar.spec  pyproject.toml
Sources/ClaudeUsageBar/: App.swift  AppSettings.swift  MenuView.swift  Models.swift  SettingsView.swift  UpdateState.swift  UsageReader.swift
assets/: AppIcon.icns
claude_usage_bar/: __main__.py
scripts/: make_icon.py
